tests/ui/issues/issue-23046.stderr
error[E0282]: type annotations needed for `Expr<'_, _>`
  --> $DIR/issue-23046.rs:17:15
   |
LL |     let ex = |x| {
   |               ^
   |
note: type must be known for type parameter in this
  --> $DIR/issue-23046.rs:11:1
   |
LL | / pub fn let_<'var, VAR, F: for<'v> Fn(Expr<'v, VAR>) -> Expr<'v, VAR>>
LL | |                        (a: Expr<'var, VAR>, b: F) -> Expr<'var, VAR> {
   | |____________________________________________________________________^
help: consider giving this closure parameter an explicit type, where the type for type parameter `VAR` is specified
   |
LL |     let ex = |x: Expr<'_, VAR>| {
   |                +++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
